<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard1"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header"
        />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YourPersonality"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/tv_dashboard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard"
        android:layout_below="@id/tvAppName"
        android:layout_alignLeft="@id/tvAppName"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/colorWhite"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp">
            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/cardview_bg"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/mbti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_text3"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_text8"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="130dp"
                    android:padding="6dp"
                    android:src="@drawable/two" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/cardview2_bg"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPersonalityTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/dashboard_text4"
                        android:textColor="@color/colorWhite"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/dashboard_text9"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="120dp"
                    android:padding="6dp"
                    android:src="@drawable/three" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/cardview4_bg"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/savedResults"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/dashboard_text6"
                        android:textColor="@color/colorWhite"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_text7"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="80dp"
                    android:padding="6dp"
                    android:src="@drawable/person2" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>